pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libfap5.pc

#SUBDIRS = src test clm
SUBDIRS = src test

sconfdir = $(pkgdatadir)/conf
#dist_sconf_DATA = \
#	     etc/objspec.dtd

modulesdir = $(pkgdatadir)/modules
dist_modules_DATA = \
	     modules/dutil.chs


EXTRA_DIST = \
	     modules/adp.chs

