includedir = @includedir@/fap5

AM_CPPFLAGS = -D_PLAT_LINUX_ -pthread

lib_LTLIBRARIES = libfap5.la

libfap5_la_SOURCES = \
		     desconst.h \
		     rmutdata.h \
		     rmutdata.cpp \
		     func.h \
		     func.cpp \
		     dest.h \
		     dest.cpp \
		     rdatauri.h \
		     rdatauri.cpp \
		     data.cpp \
		     rdata.h \
		     rdata.cpp \
		     des.h \
		     des.cpp \
		     syst.h \
		     syst.cpp \
		     connpoint.h \
		     connpoint.cpp \
		     import.h \
		     import.cpp \
		     elem.h \
		     elem.cpp \
		     log.h \
		     log.cpp \
		     provdef.h \
		     provdef.cpp \
		     prof_ids.h \
		     prof.h \
		     prof.cpp \
		     chromo2.h \
		     chromo2.cpp \
		     prov.h \
		     prov.cpp \
		     factr.h \
		     factr.cpp \
		     env.h \
		     env.cpp \
		     ifu.h \
		     ifu.cpp \
		     chromo.h \
		     chromo.cpp \
		     guri.h \
		     guri.cpp \
		     node.h \
		     node.cpp \
		     nconn.h \
		     typeid.h \
		     mdata.h \
		     mdes.h \
		     msyst.h \
		     melem.h \
		     mplugin.h \
		     mlauncher.h \
		     mprof.h \
		     mlog.h \
		     mprov.h \
		     menv.h \
		     minh.h \
		     mobserv.h \
		     mecont.h \
		     mchromo.h \
		     mowning.h \
		     mnode.h \
		     miface.h

include_HEADERS = \
		   ifu.h \
		   chromo.h \
		   guri.h \
		   nconn.h \
		   typeid.h \
		   mdata.h \
		   mdes.h \
		   msyst.h \
		   melem.h \
		   mplugin.h \
		   mlauncher.h \
		   mprof.h \
		   mlog.h \
		   mprov.h \
		   menv.h \
		   minh.h \
		   mobserv.h \
		   mecont.h \
		   mchromo.h \
		   mowning.h \
		   mnode.h \
		   miface.h

libfap5_la_LDFLAGS = -rdynamic -no-undefined -lrt -ldl
