includedir = @includedir@/fap5

AM_CPPFLAGS = -D_PLAT_LINUX_ -pthread

lib_LTLIBRARIES = libfap5.la

libfap5_la_SOURCES = \
		     mnt.h \
		     mnt.cpp \
		     desio.h \
		     desio.cpp \
		     dessdc.h \
		     dessdc.cpp \
		     dessdo.h \
		     dessdo.cpp \
		     desadp.h \
		     desadp.cpp \
		     vert.h \
		     vert.cpp \
		     desconst.h \
		     rmutdata.h \
		     rmutdata.cpp \
		     func.h \
		     func.cpp \
		     dest.h \
		     dest.cpp \
		     rdatauri.h \
		     rdatauri.cpp \
		     data.cpp \
		     rdata.h \
		     rdata.cpp \
		     des.h \
		     des.cpp \
		     syst.h \
		     syst.cpp \
		     connpoint.h \
		     connpoint.cpp \
		     import.h \
		     import.cpp \
		     elem.h \
		     elem.cpp \
		     log.h \
		     log.cpp \
		     provdef.h \
		     provdef.cpp \
		     prof_ids.h \
		     prof.h \
		     prof.cpp \
		     chromo2.h \
		     chromo2.cpp \
		     prov.h \
		     prov.cpp \
		     factr.h \
		     factr.cpp \
		     env.h \
		     env.cpp \
		     ifu.h \
		     ifu.cpp \
		     chromo.h \
		     chromo.cpp \
		     guri.h \
		     guri.cpp \
		     node.h \
		     node.cpp \
		     nconn.h \
		     npconn.h \
		     npconn.cpp \
		     typeid.h \
		     mlink.h \
		     mconnpoint.h \
		     mconnpoint.h \
		     mdata.h \
		     mdes.h \
		     msyst.h \
		     melem.h \
		     mplugin.h \
		     mlauncher.h \
		     mprof.h \
		     mlog.h \
		     mprov.h \
		     menv.h \
		     minh.h \
		     mobserv.h \
		     mecont.h \
		     mchromo.h \
		     mowning.h \
		     mvert.h \
		     mnode.h \
		     miface.h

include_HEADERS = \
		   chromo2.h \
		   desadp.h \
		   vert.h \
		   connpoint.h \
		   prof_ids.h \
		   rmutdata.h \
		   log.h \
		   prof.h \
		   dest.h \
		   func.h \
		   node.h \
		   elem.h \
		   syst.h \
		   rdatauri.h \
		   rdata.h \
		   des.h \
		   factr.h \
		   env.h \
		   prov.h \
		   ifu.h \
		   chromo.h \
		   guri.h \
		   nconn.h \
		   npconn.h \
		   typeid.h \
		   mmntp.h \
		   mlink.h \
		   mconnpoint.h \
		   mdata.h \
		   mdes.h \
		   msyst.h \
		   melem.h \
		   mplugin.h \
		   mlauncher.h \
		   mprof.h \
		   mlog.h \
		   mprov.h \
		   menv.h \
		   minh.h \
		   mobserv.h \
		   mecont.h \
		   mchromo.h \
		   mowning.h \
		   mvert.h \
		   mnode.h \
		   miface.h

libfap5_la_LDFLAGS = -rdynamic -no-undefined -lrt -ldl
